--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
   <head>
+    <style>
+      body {
+        font-family: sans-serif;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hey there!</h1>
-    <h2>Welcome to my corner of the web, some games will be added here soon, for now though, it just this,</h2>
+    <h1>JamPals</h1>
+    <h2>My games for you to play!</h2>
+    <br>
+    <a href = "/pig"> Flappy Pig </a>
   </body>
 </html>
