Add a link to glo.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <h1>JamPals</h1>
     <h2>My games for you to play!</h2>
     <br>
+     <p>Pick from the games below to find something to play.</p>
+    <br>
     <a href = "/pig"> Flappy Pig </a>
+    <br>
+    <a href = "/glo"> Glo </a>
   </body>
 </html>
