--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
-<html>
-  <head>
+<html><head>
     <style>
       body {
+        background-color: black;
         font-family: sans-serif;
         text-align: center;
+        color: white;
       }
-    </style>
+
+     .header {
+        padding-top: 50px;
+        font-size: 150px;
+        margin-bottom: 0px;
+     }</style>
   </head>
   <body>
-    <h1>JamPals</h1>
-    <h2>My games for you to play!</h2>
+    <h1 class="header">Welcome...</h1>
+    <h2>... to my corner of the internet.</h2>
     <br>
      <p>Pick from the games below to find something to play.</p>
     <br>
-    <a href = "/pig"> Flappy Pig </a>
+    <a href="/pig"> Flappy Pig </a>
     <br>
-    <a href = "/glo"> Glo </a>
-  </body>
-</html>
+    <a href="/glo"> Glo </a>
+  
+
+</body></html>
