Start of Redesign

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
-<html>
-  <head>
+<html><head>
     <style>
       body {
-        font-family: sans-serif;
-        text-align: center;
+          font-family: "Cascadia Code", monospace;
+          background: black;
+          color: white;
       }
+
+    main-header {
+        
+    }
+
+     .header {
+         color: yellow;
+         font-size: 150px;
+         margin-bottom: 0px;
+         text-align: center;
+     }
+
+    .subheading {
+        margin-top:0px;
+        text-align: center;
+    }
     </style>
   </head>
   <body>
-    <h1>JamPals</h1>
-    <h2>My games for you to play!</h2>
+    <header class="main-header">
+        <h1 class="header">JamPals</h1>
+        <h2 class="subheading">Welcome to JamPals!</h2>
+    </header>
+    
     <br>
      <p>Pick from the games below to find something to play.</p>
     <br>
-    <a href = "/pig"> Flappy Pig </a>
+    <a href="/pig"> Flappy Pig </a>
     <br>
-    <a href = "/glo"> Glo </a>
-  </body>
-</html>
+    <a href="/glo"> Glo </a>
+  
+
+</body></html>
