Redesign the start page.html

--- a/index.html
+++ b/index.html
@@ -1,40 +1,10 @@
-<html><head>
-    <style>
-      body {
-          font-family: "Cascadia Code", monospace;
-          background: black;
-          color: white;
-      }
-
-    main-header {
-        
-    }
-
-     .header {
-         color: yellow;
-         font-size: 150px;
-         margin-bottom: 0px;
-         text-align: center;
-     }
-
-    .subheading {
-        margin-top:0px;
-        text-align: center;
-    }
-    </style>
+<html>
+  <head>
+    <title> JamPals Corner Of the Internet </title>
+    <link rel = "stylesheet" href="glo.css">
   </head>
   <body>
-    <header class="main-header">
-        <h1 class="header">JamPals</h1>
-        <h2 class="subheading">Welcome to JamPals!</h2>
-    </header>
-    
-    <br>
-     <p>Pick from the games below to find something to play.</p>
-    <br>
-    <a href="/pig"> Flappy Pig </a>
-    <br>
-    <a href="/glo"> Glo </a>
-  
-
-</body></html>
+      <h1 class = "page-title"> JamPals Corner Of the Internet </h1>
+    <a href = "/explore"><button class = "button-primary"> Explore </button> </a>
+  </body>
+</html>
