--- a/emulator/demo.html
+++ b/emulator/demo.html
@@ -8,8 +8,8 @@
       </div>
 <script type="text/javascript">
     EJS_player = '#game';
-    EJS_gameUrl = 'https://filebin.net/kpyiv4wolfsu3yt0/0389_-_Animal_Crossing_-_Wild_World__E__Legacy_.nds'; // Url to Game rom
-    EJS_core = 'nds';  // Optional core: melonds
+    EJS_gameUrl = 'https://filebin.net/kpyiv4wolfsu3yt0/Animal_Crossing_-_Wild_World__E__Legacy_.zip'; // Url to Game rom
+    EJS_core = 'melonds';  // Optional core: melonds
 </script>
 <script src="https://www.emulatorjs.com/loader.js"></script>
     
