--- a/emulator/demo.html
+++ b/emulator/demo.html
@@ -8,7 +8,7 @@
       </div>
 <script type="text/javascript">
     EJS_player = '#game';
-    EJS_gameUrl = 'https://filebin.net/kpyiv4wolfsu3yt0/Animal_Crossing_-_Wild_World__E__Legacy_.zip'; // Url to Game rom
+    EJS_gameUrl = 'https://fastupload.io/1CJrEN6TwIei/3eCVEoPycSlbN3s/N2p3D2R18GMa5/0389%20-%20Animal%20Crossing%20-%20Wild%20World%20%28E%29%28Legacy%29.nds'; // Url to Game rom
     EJS_core = 'melonds';  // Optional core: melonds
 </script>
 <script src="https://www.emulatorjs.com/loader.js"></script>
