Create a Direct Link to my GitHub Profile
Adds a second button to /index.html that links to github.com/JamPals, this should appear next to the old 'explore' button.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
       <h1 class = "page-title"> JamPals Corner Of the Internet </h1>
     <a href = "/explore"><button class = "button-primary"> Explore </button> </a>
+    <a href = "https://github.com/JamPals"><button class = "button-primary"> Visit My GitHub Directly </button> </a>
   </body>
 </html>
