Update Explore Page to link to /scratchprojects!

--- a/explore/index.html
+++ b/explore/index.html
@@ -18,6 +18,11 @@
           <h3> Flappy Pig </h3>
           <a href = "/pig"> <button class = "button-primary"> Explore </button> </a>
         </div>
+
+        <div class = "project-card">
+          <h3> My Other Scratch Projects </h3>
+          <a href = "/scratchprojects"> <button class = "button-primary"> Explore </button> </a>
+        </div>
         
       </div>
   </body>
