--- a/explore/index.html
+++ b/explore/index.html
@@ -6,6 +6,7 @@
   <body>
       <h1 class = "page-title"> Explore </h1>
       <h2> Explore my current and old projects. </h2>
+      <a href = "https://github.com/JamPals"><button class = "button-primary"> My GitHub Profile </button> </a>
     
       <div class = "project-cards">
         
