--- a/explore/index.html
+++ b/explore/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> JamPals Corner Of the Internet </title>
+    <title> Explore - JamPals </title>
     <link rel = "stylesheet" href="/css/latest.css">
   </head>
   <body>
