--- a/scratchprojects/index.html
+++ b/scratchprojects/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> JamPals Corner Of the Internet </title>
+    <title> Scratch Projects - JamPals </title>
     <link rel = "stylesheet" href="/css/latest.css">
   </head>
   <body>
@@ -28,6 +28,11 @@
             <h3> Simple Flappy Bird Clone </h3>
             <a href = "https://scratch.mit.edu/projects/904849359/embed"> <button class = "button-primary"> View </button> </a>
         </div>
+
+        <div class = "project-card">
+          <h3> Dodge the Spikes 2 </h3>
+          <a href = "https://scratch.mit.edu/projects/975372081/embed"> <button class = "button-primary"> View </button> </a>
+      </div>
         
       </div>
 
