--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title> JamPals Corner Of the Internet </title>
+    <title> JamPals </title>
     <link rel = "stylesheet" href="/css/latest.css">
   </head>
   <body>
-      <h1 class = "page-title"> JamPals Corner Of the Internet </h1>
+      <h1 class = "page-title"> JamPals </h1>
+      <p> Welcome to my small little website!</p>
     <a href = "/explore"><button class = "button-primary"> Explore </button> </a>
   </body>
 </html>
