--- a/notepadweb.html
+++ b/notepadweb.html
@@ -6,7 +6,7 @@
 
   margin: 0; 
 
-  font-family: sans-serif; 
+  font-family: "Segoe UI", sans-serif; 
 
   font-size: 15px; 
 
@@ -20,7 +20,7 @@ textarea {
 
   margin-left: 10px; 
 
-  font-family: "Lucida Console", monospace; 
+  font-family: "Consolas", monospace; 
 
   font-size: 15px; 
 
