rewrite the entire site

--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <html>
   <head>
-    <title> JamPals </title>
-    <link rel = "stylesheet" href="/css/latest.css">
-   
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>JamPals</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-      <h1 class = "page-title"> JamPals </h1>
-      <p id = "quote"> hello! </p>
-    <a href = "/explore"><button class = "button-primary"> Explore </button> </a>
-
-     <script>
-      let quotes = ["im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
-
-const elem = document.getElementById("quote")
-
-elem.innerHTML = quotes[Math.floor(Math.random() * quotes.length)]
-    </script>
+    <h1>
+      Welcome to <emphisised-text> my </emphisised-text> corner of the internet.
+    </h1>
+    <h2>Take a rest <emphisised-text> here. </emphisised-text></h2>
+    <a class="link-padded" href="/explore">Explore</a>
+    <a class="link-padded" href="/mylinks">My Links</a>
   </body>
 </html>
