--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </h1>
     <h2>Take a rest <emphisised-text> here. </emphisised-text></h2>
     <a class="link-padded" href="/explore">Explore</a>
-    <a class="link-padded" href="/mylinks">My Links</a>
+    <a class="link-padded" href="/links">My Links</a>
   </body>
 </html>
