--- a/legacy/explore/index.html
+++ b/legacy/explore/index.html
@@ -7,18 +7,18 @@
       <h1 class = "page-title"> Explore </h1>
       <h2> Explore my current and old projects. </h2>
       <a href = "https://github.com/JamPals"><button class = "button-primary"> My GitHub Profile </button> </a>
-      <a href = "/scratchprojects"> <button class = "button-primary"> My Scratch Projects </button> </a>
+      <a href = "/legacy/scratchprojects"> <button class = "button-primary"> My Scratch Projects </button> </a>
 
       <div class = "project-cards">
         
         <div class = "project-card">
           <h3> Glo </h3>
-          <a href = "/glo"> <button class = "button-primary"> Explore </button> </a>
+          <a href = "/legacy/glo"> <button class = "button-primary"> Explore </button> </a>
         </div>
         
         <div class = "project-card">
           <h3> Flappy Pig </h3>
-          <a href = "/pig"> <button class = "button-primary"> Explore </button> </a>
+          <a href = "/legacy/pig"> <button class = "button-primary"> Explore </button> </a>
         </div>
 
   
