--- a/legacy/index.html
+++ b/legacy/index.html
@@ -7,7 +7,7 @@
   <body>
       <h1 class = "page-title"> JamPals </h1>
       <p id = "quote"> hello! </p>
-    <a href = "/explore"><button class = "button-primary"> Explore </button> </a>
+    <a href = "/legacy/explore"><button class = "button-primary"> Explore </button> </a>
 
      <script>
       let quotes = ["im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
