--- a/legacy/index.html
+++ b/legacy/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> JamPals </title>
-    <link rel = "stylesheet" href="/css/latest.css">
+    <link rel = "stylesheet" href="/legacy/css/latest.css">
    
   </head>
   <body>
@@ -10,7 +10,7 @@
     <a href = "/legacy/explore"><button class = "button-primary"> Explore </button> </a>
 
      <script>
-      let quotes = ["im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
+      let quotes = ["flappy pig 2 does exist; its just too... impressive? i guess..", "jampals.github.io (both current and legacy) is 100% something", "im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
 
 const elem = document.getElementById("quote")
 
