--- a/legacy/explore/index.html
+++ b/legacy/explore/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Explore - JamPals </title>
-    <link rel = "stylesheet" href="/css/latest.css">
+    <link rel = "stylesheet" href="/legacy/css/latest.css">
   </head>
   <body>
       <h1 class = "page-title"> Explore </h1>
