winter theme and other bug fixes

--- a/explore/index.html
+++ b/explore/index.html
@@ -1,14 +1,17 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&display=swap" rel="stylesheet">
     <title>JamPals - Explore</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body style="max-width: 25%;"> <!--this contains a horrible way of making the winter them look okay on this page-->
     <h1><emphisised-text>Explore</emphisised-text> my projects.</h1>
     <h2>More coming <emphisised-text>soon</emphisised-text>...ish.</h2>
     <a class="link-padded" href="/">Back to Home</a>
@@ -18,12 +21,13 @@
         display: grid;
         width: 90vw;
         grid-template-columns: 120px 120px 120px 120px;
+        margin-top: 20px;
       "
     >
       <card>
         <h3>JamPals</h3>
         <h4>The site you're on right now.</h4>
-        <a href="/">Explore</a>
+        <a href="/">Explore</a> <!-- the most useless button ever -->
       </card>
       <card>
         <h3>JamPals Legacy</h3>
