--- a/legacy/explore/index.html
+++ b/legacy/explore/index.html
@@ -20,6 +20,12 @@
           <h3> Flappy Pig </h3>
           <a href = "/legacy/pig"> <button class = "button-primary"> Explore </button> </a>
         </div>
+        <br>
+        <div class = "project-card" style="max-width: 150px;">
+          <h3> Notepad Web </h3>
+          <p>An experimental project by me, unfinished it its current state.</p>
+          <a href = "/legacy/notepadweb.html"> <button class = "button-primary"> Explore </button> </a>
+        </div>
 
   
         
