--- a/legacy/index.html
+++ b/legacy/index.html
@@ -8,9 +8,11 @@
       <h1 class = "page-title"> JamPals </h1>
       <p id = "quote"> hello! </p>
     <a href = "/legacy/explore"><button class = "button-primary"> Explore </button> </a>
-
+    <br>
+    <a href="/">Take me back to the new version!</a>
+    </a>
      <script>
-      let quotes = ["flappy pig 2 does exist; its just too... impressive? i guess..", "jampals.github.io (both current and legacy) is 100% something", "im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
+      let quotes = ["im kinda putting more attention into legacy than the latest version - jampals 20/12/24", "flappy pig 2 does exist; its just too... impressive? i guess..", "jampals.github.io (both current and legacy) is 100% something", "im too lazy to think of a quote for this", "welcome to my corner of the internet", "welcome to my small website", "the games- i mean projects here are pretty boring", "dylan, dont just use my stylesheets, learn css"]
 
 const elem = document.getElementById("quote")
 
