--- a/404.html
+++ b/404.html
@@ -11,9 +11,10 @@
     <title>JamPals</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body class="error-page">
     <h1>Page <emphisised-text>Not Found</emphisised-text> or <emphisised-text>Does Not Exist</emphisised-text></h1>
     <h2>Error <emphisised-text>404</emphisised-text></h2>
     <a class="link-padded" href="/">Return Home</a>
+    <p>"You can't stay on an error page forever. Hit the above link and move on."</p>
   </body>
 </html>
