add dodge the spikes

--- a/explore/index.html
+++ b/explore/index.html
@@ -34,6 +34,11 @@
         <h4>The classic version of my website.</h4>
         <a href="/legacy">Explore</a>
       </card>
+      <card>
+        <h3>Dodge the Spikes</h3>
+        <h4>A godot remake of my scratch project "Dodge the Spikes 2".</h4>
+        <a href="/dts">Explore</a>
+      </card>
     </div>
   </body>
 </html>
